--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -91,44 +91,49 @@
         app:layout_constraintTop_toBottomOf="@+id/tableLayout">
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/textViewLeft"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
             android:gravity="center|center_horizontal"
-            android:text="0" />
+            android:text="0"
+            android:textSize="36sp" />
 
         <TextView
-            android:id="@+id/textView9"
+            android:id="@+id/textViewOperator"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center|center_horizontal"
-            android:text="+" />
+            android:text="+"
+            android:textSize="30sp" />
 
         <TextView
             android:id="@+id/textView10"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
             android:gravity="center|center_horizontal"
-            android:text="0" />
+            android:text="0"
+            android:textSize="36sp" />
 
         <TextView
             android:id="@+id/textView11"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center|center_horizontal"
-            android:text="=" />
+            android:text="="
+            android:textSize="30sp" />
 
         <TextView
-            android:id="@+id/textView12"
+            android:id="@+id/textViewAnswer"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
             android:gravity="center|center_horizontal"
-            android:text="0" />
+            android:text="0"
+            android:textSize="60sp" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
