--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -110,7 +110,7 @@
             android:textSize="30sp" />
 
         <TextView
-            android:id="@+id/textView10"
+            android:id="@+id/textViewRight"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="2"
