不具合の修正

--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -8,7 +8,7 @@
 
     <TableLayout
         android:id="@+id/tableLayout"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -139,7 +139,7 @@
 
     <TableLayout
         android:id="@+id/tableLayout2"
-        android:layout_width="409dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
@@ -158,7 +158,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="7"
-                android:textSize="36sp" />
+                android:textSize="24sp" />
 
             <Button
                 android:id="@+id/number8"
@@ -166,7 +166,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="8"
-                android:textSize="36sp" />
+                android:textSize="24sp" />
 
             <Button
                 android:id="@+id/number9"
@@ -174,7 +174,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="9"
-                android:textSize="36sp" />
+                android:textSize="24sp" />
         </TableRow>
 
         <TableRow
@@ -187,7 +187,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="4"
-                android:textSize="36sp" />
+                android:textSize="24sp" />
 
             <Button
                 android:id="@+id/number5"
@@ -195,7 +195,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="5"
-                android:textSize="36sp" />
+                android:textSize="24sp" />
 
             <Button
                 android:id="@+id/number6"
@@ -203,7 +203,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="6"
-                android:textSize="36sp" />
+                android:textSize="24sp" />
         </TableRow>
 
         <TableRow
@@ -216,7 +216,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="1"
-                android:textSize="36sp" />
+                android:textSize="24sp" />
 
             <Button
                 android:id="@+id/number2"
@@ -224,7 +224,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="2"
-                android:textSize="36sp" />
+                android:textSize="24sp" />
 
             <Button
                 android:id="@+id/number3"
@@ -232,7 +232,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="3"
-                android:textSize="36sp" />
+                android:textSize="24sp" />
         </TableRow>
 
         <TableRow
@@ -245,7 +245,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="0"
-                android:textSize="36sp" />
+                android:textSize="24sp" />
 
             <Button
                 android:id="@+id/minus"
@@ -253,7 +253,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="-"
-                android:textSize="36sp" />
+                android:textSize="24sp" />
 
             <Button
                 android:id="@+id/clearButton"
@@ -261,7 +261,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Clear"
-                android:textSize="36sp" />
+                android:textSize="24sp" />
         </TableRow>
     </TableLayout>
 
@@ -285,6 +285,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:text="戻る"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/checkAnswer" />
