--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,6 @@
         app:srcCompat="@drawable/image_title" />
 
 
-
     <TextView
         android:id="@+id/textView"
         android:layout_width="0dp"
@@ -35,9 +34,10 @@
 
     <Spinner
         android:id="@+id/spinner"
-        android:layout_width="240dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
